--- a/MetaCom/app/src/main/res/layout/activity_chat.xml
+++ b/MetaCom/app/src/main/res/layout/activity_chat.xml
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.metarhia.metacom.Chat.ChatActivity">
-
-</android.support.constraint.ConstraintLayout>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:id="@+id/chat_container"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent">
+</FrameLayout>
