--- a/MetaCom/app/src/main/res/layout/fragment_chat2.xml
+++ b/MetaCom/app/src/main/res/layout/fragment_chat2.xml
@@ -1,12 +1,74 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context="com.metarhia.metacom.Chat.ChatFragment">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:context="com.metarhia.metacom.Chat.ChatFragment">
 
-    <TextView
+    <LinearLayout
+        android:id="@+id/toolbar_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Chat fragment"/>
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true">
 
-</FrameLayout>
+        <include layout="@layout/toolbar"/>
+    </LinearLayout>
+
+
+    <RelativeLayout
+        android:id="@+id/input_message_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        >
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_alignParentTop="true"
+            android:background="@color/black"/>
+
+        <ImageView
+            android:id="@+id/attach"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_margin="@dimen/small_margin"
+            android:src="@drawable/ic_file_upload_black_24dp"/>
+
+        <ImageView
+            android:id="@+id/send"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_centerVertical="true"
+            android:layout_margin="@dimen/small_margin"
+            android:layout_toLeftOf="@id/attach"
+            android:src="@drawable/ic_mail_black_24dp"/>
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/input_message"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/small_margin"
+            android:layout_toLeftOf="@id/send"
+            android:fontFamily="sans-serif-light"
+            android:hint="@string/input_message"
+            android:inputType="text"
+            android:textColor="@color/black"
+            android:textColorHint="@color/black"
+            android:textSize="@dimen/text_size"/>
+
+    </RelativeLayout>
+
+    <ListView
+        android:id="@+id/messages_list"
+        android:layout_margin="@dimen/small_margin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/input_message_layout"
+        android:layout_below="@id/toolbar_layout"
+        android:divider="@null"
+        android:dividerHeight="@dimen/small_margin"/>
+</RelativeLayout>
