--- a/MetaCom/app/src/main/res/layout/fragment_download_code_dialog.xml
+++ b/MetaCom/app/src/main/res/layout/fragment_download_code_dialog.xml
@@ -4,14 +4,14 @@
               android:layout_height="wrap_content"
               android:background="@drawable/border"
               android:orientation="vertical"
-              tools:context="com.metarhia.metacom.Files.DownloadCodeDialog">
+              tools:context="com.metarhia.metacom.Files.DownloadFileDialog">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/small_margin"
         android:fontFamily="sans-serif-light"
-        android:text="@string/enter_code"
+        android:text="@string/enter_download_code"
         android:textColor="@color/black"
         android:textSize="@dimen/text_size"/>
 
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/small_margin"
         android:fontFamily="sans-serif-light"
-        android:hint="@string/file_code"
+        android:hint="@string/download_code"
         android:inputType="text"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
@@ -43,6 +43,7 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/button_cancel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -59,6 +60,7 @@
             android:background="@color/black"/>
 
         <TextView
+            android:id="@+id/button_ok"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
