--- a/MetaCom/app/src/main/res/layout/fragment_files.xml
+++ b/MetaCom/app/src/main/res/layout/fragment_files.xml
@@ -1,24 +1,51 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:gravity="center"
-              android:orientation="horizontal"
-              tools:context="com.metarhia.metacom.Files.FilesFragment">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="horizontal"
+                tools:context="com.metarhia.metacom.Files.FilesFragment">
 
-    <ImageView
-        android:id="@+id/upload_file"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_margin="@dimen/small_margin"
-        android:background="@drawable/border"
-        android:src="@drawable/ic_file_upload_black_24dp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/download_file"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_margin="@dimen/small_margin"
+        <ImageView
+            android:id="@+id/upload_file"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_margin="@dimen/small_margin"
+            android:background="@drawable/border"
+            android:src="@drawable/ic_file_upload_black_24dp"/>
+
+        <ImageView
+            android:id="@+id/download_file"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_margin="@dimen/small_margin"
+            android:background="@drawable/border"
+            android:src="@drawable/ic_file_download_black_24dp"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/bottom_notice_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:background="@drawable/border"
-        android:src="@drawable/ic_file_download_black_24dp"/>
-</LinearLayout>
+        android:orientation="vertical"
+        android:padding="@dimen/small_margin"
+        android:visibility="gone">
+
+        <TextView
+            android:id="@+id/bottom_notice_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-light"
+            android:text=""
+            android:textAlignment="center"
+            android:textSize="@dimen/text_size"/>
+    </LinearLayout>
+</RelativeLayout>
