--- a/MetaCom/app/src/main/res/layout/fragment_files.xml
+++ b/MetaCom/app/src/main/res/layout/fragment_files.xml
@@ -4,7 +4,7 @@
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:orientation="horizontal"
-                tools:context="com.metarhia.metacom.Files.FilesFragment">
+                tools:context=".activities.files.FilesFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
