--- a/MetaCom/app/src/main/res/layout/fragment_main.xml
+++ b/MetaCom/app/src/main/res/layout/fragment_main.xml
@@ -2,7 +2,7 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:context="com.metarhia.metacom.MainFragment">
+                tools:context="com.metarhia.metacom.activities.MainFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
