--- a/MetaCom/app/src/main/res/layout/fragment_main.xml
+++ b/MetaCom/app/src/main/res/layout/fragment_main.xml
@@ -11,55 +11,16 @@
 
         <include layout="@layout/toolbar"/>
 
-        <LinearLayout
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tab_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_height="wrap_content"/>
 
-            <TextView
-                android:id="@+id/files_tab"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/small_margin"
-                android:layout_weight="1"
-                android:fontFamily="sans-serif-light"
-                android:text="@string/files"
-                android:textAlignment="center"
-                android:textAllCaps="true"
-                android:textColor="@color/black"
-                android:textSize="@dimen/text_size"/>
-
-            <View
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:background="@color/black"/>
-
-            <TextView
-                android:id="@+id/chat_tab"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/small_margin"
-                android:layout_weight="1"
-                android:fontFamily="sans-serif-light"
-                android:text="@string/chat"
-                android:textAlignment="center"
-                android:textAllCaps="true"
-                android:textColor="@color/black"
-                android:textSize="@dimen/text_size"/>
-        </LinearLayout>
-
-        <View
+        <android.support.v4.view.ViewPager
+            android:id="@+id/view_pager"
             android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginBottom="@dimen/small_margin"
-            android:background="@color/black"/>
+            android:layout_height="match_parent"/>
 
-        <FrameLayout
-            android:id="@+id/main_screen_container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center">
-        </FrameLayout>
     </LinearLayout>
 
 </RelativeLayout>
