--- a/MetaCom/app/src/main/res/layout/fragment_download_code_dialog.xml
+++ b/MetaCom/app/src/main/res/layout/fragment_download_code_dialog.xml
@@ -15,7 +15,7 @@
         android:textSize="@dimen/text_size"/>
 
     <android.support.design.widget.TextInputEditText
-        android:id="@+id/host"
+        android:id="@+id/file_code"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/small_margin"
