--- a/MetaCom/app/src/main/res/layout/fragment_chat.xml
+++ b/MetaCom/app/src/main/res/layout/fragment_chat.xml
@@ -1,30 +1,63 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:gravity="center"
-              android:orientation="vertical">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:context=".activities.chat.ChatFragment">
 
-    <android.support.design.widget.TextInputEditText
-        android:id="@+id/chat_name"
-        android:layout_width="200dp"
+    <include
+        android:id="@+id/toolbar_layout"
+        layout="@layout/toolbar"/>
+
+    <RelativeLayout
+        android:id="@+id/input_message_layout"
+        android:layout_width="match_parent"
+        android:layout_height="?actionBarSize"
+        android:layout_alignParentBottom="true"
+        android:background="@color/white"
+        android:elevation="@dimen/small_margin">
+
+        <ImageView
+            android:id="@+id/attach"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_margin="@dimen/small_margin"
+            android:src="@drawable/ic_file_upload_black_24dp"/>
+
+        <ImageView
+            android:id="@+id/send"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_centerVertical="true"
+            android:layout_margin="@dimen/small_margin"
+            android:layout_toLeftOf="@id/attach"
+            android:src="@drawable/ic_mail_black_24dp"/>
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/input_message"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/small_margin"
+            android:layout_toLeftOf="@id/send"
+            android:fontFamily="sans-serif-light"
+            android:hint="@string/input_message"
+            android:inputType="text"
+            android:textColor="@color/black"
+            android:textColorHint="@color/black"
+            android:textSize="@dimen/text_size"/>
+
+    </RelativeLayout>
+
+    <ListView
+        android:id="@+id/messages_list"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-light"
-        android:hint="@string/input_chat_name"
-        android:inputType="text"
-        android:textColor="@color/black"
-        android:textColorHint="@color/black"
-        android:textSize="@dimen/text_size"/>
-
-    <android.support.v7.widget.AppCompatButton
-        android:id="@+id/submit"
-        android:layout_width="200dp"
-        android:layout_height="40dp"
+        android:layout_above="@id/input_message_layout"
+        android:layout_below="@id/toolbar_layout"
         android:layout_margin="@dimen/small_margin"
-        android:clickable="true"
-        android:enabled="true"
-        android:fontFamily="sans-serif-light"
-        android:text="@string/connection_submit"
-        android:textSize="@dimen/text_size"/>
-
-</LinearLayout>
+        android:divider="@null"
+        android:dividerHeight="@dimen/small_margin"/>
+</RelativeLayout>
