--- a/MetaCom/app/src/main/res/layout/message.xml
+++ b/MetaCom/app/src/main/res/layout/message.xml
@@ -1,49 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:id="@+id/message_layout"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:orientation="vertical">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/message_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-    <LinearLayout
-        android:id="@+id/message_right_layout"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:id="@+id/message_right_layout_with_spinner"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:layout_marginBottom="@dimen/small_margin"
-        android:layout_marginLeft="@dimen/big_margin"
-        android:layout_marginRight="@dimen/small_margin"
-        android:background="@drawable/message_out">
+        android:gravity="right">
 
-        <TextView
-            android:id="@+id/message_right_text"
+        <ProgressBar
+            android:id="@+id/progress_bar_right"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="@dimen/tiny_margin"
+            android:indeterminateTint="@color/black"
+            android:visibility="gone"/>
+
+        <RelativeLayout
+            android:id="@+id/message_right_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/small_margin"
-            android:fontFamily="sans-serif-light"
-            android:text="Lorem ipsum"
-            android:textColor="@color/white"
-            android:textSize="@dimen/text_size"/>
-    </LinearLayout>
+            android:layout_marginBottom="@dimen/small_margin"
+            android:layout_marginLeft="@dimen/big_margin"
+            android:layout_marginRight="@dimen/tiny_margin"
+            android:layout_toLeftOf="@id/progress_bar_right"
+            android:background="@drawable/message_out"
+            android:gravity="right">
 
-    <LinearLayout
-        android:id="@+id/message_left_layout"
+            <TextView
+                android:id="@+id/message_right_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/small_margin"
+                android:fontFamily="sans-serif-light"
+                android:text="Lorem ipsum Lorem Lorem ipsum Lorem Lorem ipsum Lorem Lorem ipsum Lorem Lorem ipsum Lorem Lorem ipsum Lorem Lorem ipsum Lorem "
+                android:textColor="@color/white"
+                android:textSize="@dimen/text_size"/>
+
+        </RelativeLayout>
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/message_left_layout_with_spinner"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/small_margin"
-        android:layout_marginLeft="@dimen/small_margin"
-        android:layout_marginRight="@dimen/big_margin"
-        android:background="@drawable/message_in">
+        android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/message_left_text"
+        <ProgressBar
+            android:id="@+id/progress_bar_left"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/tiny_margin"
+            android:indeterminateTint="@color/black"
+            android:visibility="gone"/>
+
+        <RelativeLayout
+            android:id="@+id/message_left_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/small_margin"
-            android:fontFamily="sans-serif-light"
-            android:text="Lorem ipsum"
-            android:textColor="@color/black"
-            android:textSize="@dimen/text_size"/>
-    </LinearLayout>
+            android:layout_marginBottom="@dimen/small_margin"
+            android:layout_marginLeft="@dimen/tiny_margin"
+            android:layout_marginRight="@dimen/big_margin"
+            android:layout_toRightOf="@id/progress_bar_left"
+            android:background="@drawable/message_in"
+            android:orientation="horizontal">
 
-</LinearLayout>
+            <TextView
+                android:id="@+id/message_left_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_margin="@dimen/small_margin"
+                android:fontFamily="sans-serif-light"
+                android:text="Lorem ipsum ipsum "
+                android:textColor="@color/black"
+                android:textSize="@dimen/text_size"/>
+
+        </RelativeLayout>
+
+    </RelativeLayout>
+
+</RelativeLayout>
