--- a/MetaCom/app/src/main/res/layout/message_out.xml
+++ b/MetaCom/app/src/main/res/layout/message_out.xml
@@ -33,9 +33,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/small_margin"
+            android:autoLink="web"
             android:fontFamily="sans-serif-light"
+            android:linksClickable="true"
             android:text="Lorem ipsum Lorem Lorem ipsum Lorem Lorem ipsum Lorem Lorem ipsum Lorem Lorem ipsum Lorem Lorem ipsum Lorem Lorem ipsum Lorem "
             android:textColor="@color/white"
+            android:textColorLink="@color/black"
             android:textSize="@dimen/text_size"/>
 
     </RelativeLayout>
