add spinner and cancel button to connection and chat login screen

--- a/MetaCom/app/src/main/res/layout/fragment_chat_login.xml
+++ b/MetaCom/app/src/main/res/layout/fragment_chat_login.xml
@@ -1,5 +1,4 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:gravity="center"
@@ -24,7 +23,30 @@
         android:clickable="true"
         android:enabled="true"
         android:fontFamily="sans-serif-light"
-        android:text="@string/connection_submit"
+        android:text="@string/submit"
         android:textSize="@dimen/text_size"/>
+
+    <android.support.v7.widget.AppCompatButton
+        android:id="@+id/cancel"
+        android:layout_width="200dp"
+        android:layout_height="40dp"
+        android:layout_margin="@dimen/small_margin"
+        android:clickable="true"
+        android:enabled="true"
+        android:fontFamily="sans-serif-light"
+        android:text="@string/cancel"
+        android:textSize="@dimen/text_size"
+        android:visibility="gone"/>
+
+    <ProgressBar
+        android:id="@+id/spinner"
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="@dimen/tiny_margin"
+        android:indeterminateTint="@color/black"
+        android:indeterminateTintMode="src_atop"
+        android:visibility="invisible"/>
 
 </LinearLayout>
