--- a/MetaCom/app/src/main/res/layout/fragment_connection.xml
+++ b/MetaCom/app/src/main/res/layout/fragment_connection.xml
@@ -2,6 +2,7 @@
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:background="@color/white"
               android:gravity="center"
               android:orientation="vertical"
               tools:context=".activities.connection.ConnectionFragment">
@@ -10,7 +11,7 @@
         android:id="@+id/icon_image"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:src="@drawable/circle"/>
+        android:src="@drawable/icon_app"/>
 
     <TextView
         android:layout_width="match_parent"
