add done action to keyboard

--- a/MetaCom/app/src/main/res/layout/fragment_chat.xml
+++ b/MetaCom/app/src/main/res/layout/fragment_chat.xml
@@ -49,6 +49,7 @@
             android:layout_toStartOf="@id/send"
             android:fontFamily="sans-serif-light"
             android:hint="@string/input_message"
+            android:imeOptions="actionDone"
             android:textColor="@color/black"
             android:textColorHint="@color/black"
             android:textSize="@dimen/text_size"/>
