--- a/MetaCom/app/src/main/res/layout/fragment_chat.xml
+++ b/MetaCom/app/src/main/res/layout/fragment_chat.xml
@@ -48,7 +48,7 @@
             android:layout_toLeftOf="@id/send"
             android:layout_toStartOf="@id/send"
             android:fontFamily="sans-serif-light"
-            android:hint="@string/input_message"
+            android:hint="@string/new_message"
             android:imeOptions="actionDone"
             android:textColor="@color/black"
             android:textColorHint="@color/black"
