--- a/MetaCom/app/src/main/res/layout/fragment_upload_file_dialog.xml
+++ b/MetaCom/app/src/main/res/layout/fragment_upload_file_dialog.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/small_margin"
         android:fontFamily="sans-serif-light"
-        android:text="@string/upload_code"
+        android:text="@string/upload_desc"
         android:textColor="@color/black"
         android:textSize="@dimen/text_size"/>
 </LinearLayout>
