small improvements - disable download/upload button when file is transferred - capitalize input message - grey hints

--- a/MetaCom/app/src/main/res/layout/fragment_chat_login.xml
+++ b/MetaCom/app/src/main/res/layout/fragment_chat_login.xml
@@ -13,7 +13,7 @@
         android:imeOptions="actionDone"
         android:inputType="text"
         android:textColor="@color/black"
-        android:textColorHint="@color/black"
+        android:textColorHint="@color/greyDark"
         android:textSize="@dimen/text_size"/>
 
     <android.support.v7.widget.AppCompatButton
