--- a/MetaCom/app/src/main/res/layout/fragment_chat.xml
+++ b/MetaCom/app/src/main/res/layout/fragment_chat.xml
@@ -35,6 +35,7 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_margin="@dimen/small_margin"
+            android:fontFamily="sans-serif-light"
             android:text="@string/send"/>
 
         <android.support.design.widget.TextInputEditText
@@ -51,8 +52,9 @@
             android:fontFamily="sans-serif-light"
             android:hint="@string/new_message"
             android:imeOptions="actionDone"
+            android:inputType="textCapSentences"
             android:textColor="@color/black"
-            android:textColorHint="@color/black"
+            android:textColorHint="@color/greyDark"
             android:textSize="@dimen/text_size"/>
 
     </RelativeLayout>
