update button strings

--- a/MetaCom/app/src/main/res/layout/fragment_chat_login.xml
+++ b/MetaCom/app/src/main/res/layout/fragment_chat_login.xml
@@ -24,7 +24,7 @@
         android:clickable="true"
         android:enabled="true"
         android:fontFamily="sans-serif-light"
-        android:text="@string/submit"
+        android:text="@string/join"
         android:textSize="@dimen/text_size"/>
 
     <ProgressBar
