--- a/MetaCom/app/src/main/res/layout/fragment_connection.xml
+++ b/MetaCom/app/src/main/res/layout/fragment_connection.xml
@@ -1,70 +1,82 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="@color/white"
-              android:gravity="center"
-              android:orientation="vertical"
-              tools:context=".activities.connection.ConnectionFragment">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/white">
 
-    <ImageView
-        android:id="@+id/icon_image"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/icon_app"/>
-
-    <TextView
+    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/small_margin"
-        android:fontFamily="sans-serif-light"
-        android:text="@string/app_name"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="@dimen/text_size"
-        />
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:orientation="vertical"
+        tools:context=".activities.connection.ConnectionFragment">
 
-    <android.support.design.widget.TextInputEditText
-        android:id="@+id/host"
-        android:layout_width="200dp"
+        <ImageView
+            android:id="@+id/icon_image"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:src="@drawable/icon_app" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/small_margin"
+            android:fontFamily="sans-serif-light"
+            android:text="@string/app_name"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="@dimen/text_size" />
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/host"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-light"
+            android:hint="@string/connection_host"
+            android:inputType="text"
+            android:textColor="@color/black"
+            android:textColorHint="@color/greyDark"
+            android:textSize="@dimen/text_size" />
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/port"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-light"
+            android:hint="@string/connection_port"
+            android:inputType="number"
+            android:textColor="@color/black"
+            android:textColorHint="@color/greyDark"
+            android:textSize="@dimen/text_size" />
+
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/submit"
+            android:layout_width="200dp"
+            android:layout_height="40dp"
+            android:clickable="true"
+            android:enabled="true"
+            android:fontFamily="sans-serif-light"
+            android:text="@string/connect"
+            android:textSize="@dimen/text_size" />
+
+        <ProgressBar
+            android:id="@+id/spinner"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:indeterminateTint="@color/black"
+            android:indeterminateTintMode="src_atop"
+            android:visibility="gone" />
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/installation_guide"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-light"
-        android:hint="@string/connection_host"
-        android:inputType="text"
-        android:text="dev.metarhia.com"
-        android:textColor="@color/black"
-        android:textColorHint="@color/greyDark"
-        android:textSize="@dimen/text_size"/>
-
-    <android.support.design.widget.TextInputEditText
-        android:id="@+id/port"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-light"
-        android:hint="@string/connection_port"
-        android:inputType="number"
-        android:text="3000"
-        android:textColor="@color/black"
-        android:textColorHint="@color/greyDark"
-        android:textSize="@dimen/text_size"/>
-
-    <android.support.v7.widget.AppCompatButton
-        android:id="@+id/submit"
-        android:layout_width="200dp"
-        android:layout_height="40dp"
-        android:layout_margin="@dimen/small_margin"
-        android:clickable="true"
-        android:enabled="true"
-        android:fontFamily="sans-serif-light"
-        android:text="@string/connect"
-        android:textSize="@dimen/text_size"/>
-
-    <ProgressBar
-        android:id="@+id/spinner"
-        android:layout_width="15dp"
-        android:layout_height="15dp"
-        android:indeterminateTint="@color/black"
-        android:indeterminateTintMode="src_atop"
-        android:visibility="invisible"/>
-
-</LinearLayout>
+        android:layout_gravity="bottom"
+        android:layout_marginTop="@dimen/small_margin"
+        android:layout_marginBottom="@dimen/small_margin"
+        android:fontFamily="sans-serif-medium"
+        android:gravity="center"
+        android:text="@string/installation_guide"
+        android:textColor="@color/lightBlue600" />
+</FrameLayout>
