--- a/MetaCom/app/src/main/res/layout/fragment_connection.xml
+++ b/MetaCom/app/src/main/res/layout/fragment_connection.xml
@@ -27,12 +27,14 @@
             android:textColor="@color/black"
             android:textSize="@dimen/text_size" />
 
-        <android.support.design.widget.TextInputEditText
+        <AutoCompleteTextView
             android:id="@+id/host"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
+            android:completionThreshold="1"
             android:fontFamily="sans-serif-light"
             android:hint="@string/connection_host"
+            android:imeOptions="actionNext"
             android:inputType="text"
             android:textColor="@color/black"
             android:textColorHint="@color/greyDark"
